added some css styles

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <form id="user-input">
+      <form class="border border-primary" id="user-input">
         <label for="the-input">Please put in some numbers</label>
         <input type="text" name="the-input" id="beepboop-input">
         <button type="submit" name="button">Submit</button>
       </form>
-      <div id="result">
+      <div class="border border-secondary" id="result">
 
       </div>
 
