add more styling and add an ifelse statement to check if numbers were input or not

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Beep Boop</title>
   </head>
   <body>
+    <div class="header">
+      <h1>Beep Boop</h1>
+    </div>
     <div class="container">
+      <div class="border border-primary">
+        <p>Welcome to the Beep Boop Machine! Please insert numbers into the machine below, and it will let you know if it's a beep or a boop.</p>
+      </div>
       <form class="border border-primary" id="user-input">
         <label for="the-input">Please put in some numbers</label>
         <input type="text" name="the-input" id="beepboop-input">
